<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorBlack">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorLightYellow"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/solo"
            android:onClick="SoloOnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button3"
            android:text="@string/solo"
            android:textColor="@color/colorYellow"
            android:textSize="18sp" />
        <!--margin 수정 필요-->
        <Button
            android:id="@+id/group"
            android:onClick="GroupOnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="205dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button2"
            android:text="@string/group"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="67dp"
            android:paddingLeft="290dp"
            android:paddingTop="12dp"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="13sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/gr1"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginTop="155dp"
        android:background="@color/colorWhite"
        android:paddingLeft="25dp"
        android:paddingTop="9dp"
        android:drawableRight="@drawable/gold"
        android:text="@string/gr1"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr1-1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="155dp"
        android:background="@color/colorWhite"
        android:paddingLeft="5dp"
        android:paddingTop="9dp"
        android:layout_toRightOf="@+id/gr1"
        android:text="@string/gp1"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr2"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:background="@color/colorLightYellow"
        android:paddingLeft="25dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr1"
        android:drawableRight="@drawable/sliver"
        android:text="@string/gr2"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr2-1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/colorLightYellow"
        android:paddingLeft="5dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr1"
        android:layout_toRightOf="@+id/gr2"
        android:text="@string/gp2"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr3"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:paddingLeft="25dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr2"
        android:drawableRight="@drawable/bronze"
        android:text="@string/gr3"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr3-1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:paddingLeft="5dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr2"
        android:layout_toRightOf="@+id/gr3"
        android:text="@string/gp3"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr4"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:background="@color/colorLightYellow"
        android:paddingLeft="25dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr3"
        android:text="@string/gr4"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr4-1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/colorLightYellow"
        android:paddingLeft="5dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr3"
        android:layout_toRightOf="@+id/gr4"
        android:text="@string/gp4"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr5"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:paddingLeft="25dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr4"
        android:text="@string/gr5"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gr5-1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:paddingLeft="5dp"
        android:paddingTop="9dp"
        android:layout_below="@+id/gr4"
        android:layout_toRightOf="@+id/gr5"
        android:text="@string/gp5"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

</RelativeLayout>
