<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorBlack">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:foregroundGravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/use_point"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorSoftYellow"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border"
            android:padding="5dp">
            <!--포인트랑 사용자 이름은 변수로 수정해야됨-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="user님의 현재 포인트 : \n사용 가능한 포인트 : "
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:text="5600P\n5000P"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />
        </FrameLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn1t"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/use_1000p"
                android:textSize="20sp"
                android:background="@color/colorYellow"/>
            <Button
                android:id="@+id/btn2t"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="@string/use_2000p"
                android:textSize="20sp"
                android:background="@color/colorYellow"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn5t"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/use_5000p"
                android:textSize="20sp"
                android:background="@color/colorYellow"/>
            <Button
                android:id="@+id/btn10t"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="@string/use_10000p"
                android:textSize="20sp"
                android:background="@color/colorYellow"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn20t"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/use_20000p"
                android:textSize="20sp"
                android:background="@color/colorYellow"/>
            <Button
                android:id="@+id/btn50t"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="@string/use_50000p"
                android:textSize="20sp"
                android:background="@color/colorYellow"/>
        </LinearLayout>
    </FrameLayout>
    <!--
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn7000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="7000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
            <Button
                android:id="@+id/btn8000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="8000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn9000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="9000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
            <Button
                android:id="@+id/btn10000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="10000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn11000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="11000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
            <Button
                android:id="@+id/btn12000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="12000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn13000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:text="13000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
            <Button
                android:id="@+id/btn14000"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:text="14000P 사용"
                android:textSize="20sp"
                android:background="@color/colorYellow">
            </Button>
        </LinearLayout>
    </FrameLayout>
    -->


</RelativeLayout>

